[package]
name = "grpc_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.6.2" }
prost = "0.9"
prost-types = "0.9"
tokio = { version = "=1.11.0", features = [
	"rt",
	"rt-multi-thread",
	"macros",
	"sync",
	"parking_lot"
] }
anyhow = "=1.0.56"

[build-dependencies]
tonic-build = "0.6"